# vda5050-python

./: .gitignore  CMakeLists.txt  README.md  commitlint.config.js  pyproject.toml
.github/: pull_request_template.md
.github/scripts/: install-native-deps.sh
.github/workflows/: auto-merge.yml  branch-name.yml  cibw-cc.yaml  conda.yml  docker.yml  labeler.yml  pip.yml  release-pr.yml  release.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: conf.py  python_example.rst
examples/: test-vda5050.py
examples/docker/: docker-compose.yml  vda5050-adapter.Dockerfile  vda5050-master.Dockerfile
examples/docker/adapter_app/: main.py  pyproject.toml
examples/docker/master_app/: main.py  pyproject.toml
examples/mqtt_pair/: README.md  master.py  robot_adapter.py
src/: main.cpp
src/scikit_build_example/: __init__.pyi
src/vda5050/: CMakeLists.txt  __init__.py  __init__.pyi  _client.py  _client.pyi  _core.cpp  _master.py  _master.pyi  _rmf_migration.py  _rmf_migration.pyi
src/vda5050/vda5050_core/: CMakeLists.txt
src/vda5050/vda5050_core/include/vda5050_core/client/adapter/: action_execution.hpp  action_request.hpp  adapter.hpp  adapter_impl.hpp  edge_request.hpp  node_request.hpp  order_execution.hpp  state_manager.hpp
src/vda5050/vda5050_core/include/vda5050_core/errors/: error_codes.hpp
src/vda5050/vda5050_core/include/vda5050_core/execution/: handler.hpp  protocol_adapter.hpp
src/vda5050/vda5050_core/include/vda5050_core/logger/: logger.hpp
src/vda5050/vda5050_core/python/include/: rmf_migration.hpp
src/vda5050/vda5050_core/python/src/: rmf_migration.cpp
src/vda5050/vda5050_core/src/client/adapter/: action_execution.cpp  action_request.cpp  adapter.cpp  edge_request.cpp  node_request.cpp  order_execution.cpp  state_manager.cpp
src/vda5050/vda5050_core/src/execution/: protocol_adapter.cpp
src/vda5050/vda5050_core/test/execution/: test_protocol_adapter.cpp
tests/: test_basic.py
