[project]
name = "master_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.128.8",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn>=0.39.0",
    "vda5050 @ https://github.com/GameTL/vda5050-python/releases/download/v0.0.1-alpha/vda5050-0.0.1-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "vda5050 @ https://github.com/GameTL/vda5050-python/releases/download/v0.0.1-alpha/vda5050-0.0.1-cp312-cp312-macosx_26_0_arm64.whl ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "pydantic>=2.13.4",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
